zot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - zot.homelab.kszpakowski.com
      secretName: zot-cert
  rules:
    - host: "zot.homelab.kszpakowski.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zot
                port:
                  name: zot
